k8s/mongo_express_files/mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  # NodePort is the standard for Ingress to route traffic
  type: ClusterIP
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 80         # The port the Ingress will call
      targetPort: 8081 # The port Mongo Express is listening on
